# ecommerce-recsys

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api_service/: Dockerfile  cache.py  main.py
kafka_consumer/: Dockerfile  consumer.py  models.py
kafka_producer/: Dockerfile  models.py  producer.py
ml_pipeline/: Dockerfile  prepare_data.py  train.py
spark_processor/: Dockerfile  feature_engineering.py
tests/: test_api.py
